samples/_failures_safe/1761330611_9fd01c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d403c40a.c: In function ‘main’:
./samples/SAFE/__tmp_d403c40a.c:176:5: error: expected expression at end of input
  176 |     for (size_t i = 0; i < tokens->count;
      |     ^~~
./samples/SAFE/__tmp_d403c40a.c:176:5: error: expected declaration or statement at end of input
